test/rules/ok/wf_01.zc
adversary A : () -> ().
oracle O : Fq -> Fq.

prove [
  u <-$ Fq;
  w <-$ Fq;
  v <-$ Fq \ u*w;  
  la' <-$ Fq;
  hb <-$ Fq;
  la <-$ Fq;
  hs <-$ Fq;
  () <- A() with
    O(x) = [ 1
             / (v*hs*la' + w*v*hb*la + u*w*hb*la' + u*w*w*hs*la 
                -(u*w*w*hb*la) -(u*w*hs*la') -(w*v*hs*la) -(v*hb*la'))
           | not (la = la'), not(hb = hs) ];
] : true.
print_goals : t.